@@ -37,12 +37,11 @@ namespace WebCore {
     {
     public:
         virtual void contextMenuDestroyed();
-        
+
         virtual PlatformMenuDescription getCustomMenuFromDefaultItems(ContextMenu*);
         virtual void contextMenuItemSelected(ContextMenuItem*, const ContextMenu*);
 
         virtual void downloadURL(const KURL& url);
-        virtual void copyImageToClipboard(const HitTestResult&);
         virtual void lookUpInDictionary(Frame*);
         virtual void speak(const String&);
         virtual void stopSpeaking();
